--- a/styles.css
+++ b/styles.css
@@ -111,3 +111,22 @@ footer {
     padding: 1rem 0;
     margin-top: 1rem;
 }
+
+#script-container p {
+    margin: 10px 0;
+    line-height: 1.6;
+}
+
+#script-container p:first-child {
+    margin-top: 0;
+}
+
+#script-container p:nth-child(odd) {
+    font-weight: bold;
+    text-decoration: underline;
+    color: #333;
+}
+
+#script-container p:nth-child(even) {
+    margin-left: 20px;
+}
